--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.csv filter=lfs diff=lfs merge=lfs -text
 *.pkl filter=lfs diff=lfs merge=lfs -text
+models/*.pkl filter=lfs diff=lfs merge=lfs -text
 models/generalized_rf_model.pkl filter=lfs diff=lfs merge=lfs -text
