--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,11 @@
 services:
   - type: web
-    name: ai-stock-analyzer-backend
+    name: ai-stock-backend
     env: python
     plan: free
-    buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn app.main:app --host 0.0.0.0 --port $PORT
-    autoDeploy: true
+    branch: main
+    buildCommand: "pip install --upgrade pip && pip install -r requirements.txt"
+    startCommand: "gunicorn main:app -w 1 -k uvicorn.workers.UvicornWorker"
+    envVars:
+      - key: PYTHON_VERSION
+        value: 3.10.14
