--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
-fastapi==0.111.1
-uvicorn==0.23.2
-pandas==2.1.1
+fastapi==0.110.0
+uvicorn==0.30.1
+gunicorn==21.2.0
+
+pandas==2.2.2
 numpy==1.26.4
-scikit-learn==1.3.2
-xgboost==1.7.6
-joblib==1.3.2
-yfinance==0.2.27
-python-multipart
+scikit-learn==1.5.0
+xgboost==2.0.3
+
+joblib==1.4.2
+pydantic==2.7.1
+python-multipart==0.0.9
