--- a/render.yaml
+++ b/render.yaml
@@ -3,9 +3,6 @@ services:
     name: ai-stock-backend
     env: python
     plan: free
-    branch: main
-    buildCommand: "pip install --upgrade pip && pip install -r requirements.txt"
-    startCommand: "gunicorn main:app -w 1 -k uvicorn.workers.UvicornWorker"
-    envVars:
-      - key: PYTHON_VERSION
-        value: 3.10.14
+    buildCommand: pip install -r requirements.txt
+    startCommand: uvicorn app.main:app --host 0.0.0.0 --port $PORT
+    pythonVersion: 3.10
