--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,8 @@ services:
   - type: web
     name: ai-stock-backend
     env: python
-    plan: free
+    pythonVersion: 3.10
+    repo: https://github.com/MoizZeshan/AI_Stock_Analyzer
+    branch: main
     buildCommand: pip install -r requirements.txt
     startCommand: uvicorn app.main:app --host 0.0.0.0 --port $PORT
-    pythonVersion: 3.10
