Fix Render build: upgrade pip, setuptools, wheel + pin dependencies

--- a/render.yaml
+++ b/render.yaml
@@ -5,5 +5,7 @@ services:
     pythonVersion: 3.10
     repo: https://github.com/MoizZeshan/AI_Stock_Analyzer
     branch: main
-    buildCommand: pip install -r requirements.txt
+    buildCommand: |
+      python -m pip install --upgrade pip setuptools wheel
+      pip install -r requirements.txt
     startCommand: uvicorn app.main:app --host 0.0.0.0 --port $PORT
