--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@
 models/*.pkl filter=lfs diff=lfs merge=lfs -text
 models/generalized_model.pkl filter=lfs diff=lfs merge=lfs -text
 models/generalized_rf_model.pkl filter=lfs diff=lfs merge=lfs -text
+app/models/*.pkl filter=lfs diff=lfs merge=lfs -text
