--- a/render.yaml
+++ b/render.yaml
@@ -1,11 +1,10 @@
-services:
+﻿services:
   - type: web
     name: ai-stock-backend
     env: python
-    pythonVersion: 3.10
-    repo: https://github.com/MoizZeshan/AI_Stock_Analyzer
+    plan: free
+    buildCommand: pip install -r requirements.txt
+    startCommand: uvicorn app.main:app --host 0.0.0.0 --port \
+    autoDeploy: true
     branch: main
-    buildCommand: |
-      python -m pip install --upgrade pip setuptools wheel
-      pip install -r requirements.txt
-    startCommand: uvicorn app.main:app --host 0.0.0.0 --port $PORT
+    pythonVersion: "3.10"
