--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-fastapi==0.104.0
-uvicorn==0.25.0
+﻿fastapi==0.111.0
+uvicorn==0.23.2
 pandas==1.5.3
-numpy==1.23.5
-scikit-learn==1.2.2
+numpy==1.25.2
+scikit-learn==1.3.2
 xgboost==1.7.6
-python-multipart==0.0.6
+joblib==1.3.2
