--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,10 @@
-﻿services:
+services:
   - type: web
     name: ai-stock-backend
     env: python
     plan: free
-    buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn app.main:app --host 0.0.0.0 --port \
+    buildCommand: pip install --upgrade pip setuptools wheel && pip install --upgrade -r requirements.txt
+    startCommand: uvicorn app.main:app --host 0.0.0.0 --port $PORT
     autoDeploy: true
     branch: main
     pythonVersion: "3.10"
